Pre-processing codes modified to create V5 Images
Also, Denoising code moved to the pre-processing folder

--- a/Pre-processing/1. Resize Images.ipynb
+++ b/Pre-processing/1. Resize Images.ipynb
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:41:43.871991Z",
-     "start_time": "2019-05-16T05:41:41.961654Z"
+     "end_time": "2019-05-26T12:17:23.522131Z",
+     "start_time": "2019-05-26T12:17:21.417823Z"
     }
    },
    "outputs": [],
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:41:43.901325Z",
-     "start_time": "2019-05-16T05:41:43.893417Z"
+     "end_time": "2019-05-26T12:17:23.559953Z",
+     "start_time": "2019-05-26T12:17:23.553405Z"
     }
    },
    "outputs": [],
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:41:43.932406Z",
-     "start_time": "2019-05-16T05:41:43.917798Z"
+     "end_time": "2019-05-26T12:17:23.597480Z",
+     "start_time": "2019-05-26T12:17:23.587402Z"
     }
    },
    "outputs": [],
@@ -74,26 +74,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:15.126576Z",
-     "start_time": "2019-05-16T05:49:15.122375Z"
+     "end_time": "2019-05-26T12:17:58.820891Z",
+     "start_time": "2019-05-26T12:17:58.814831Z"
     }
    },
    "outputs": [],
    "source": [
-    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Box Sync/Final Project - Image Detection/03 Defect Images/For Testing Purpose - Priyank'\n",
-    "PATH_OUTPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/1. Resized Images'"
+    "# Parent folder containing folders for each defect class, each containing sample images. Path must be valid\n",
+    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Box Sync/Final Project - Image Detection/03 Defect Images/01 Raw Images - Model Inputs/Raw Images'\n",
+    "# Parent folder where the outputs will be stored. Folders will be created for each class\n",
+    "PATH_OUTPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/1. Resized Images'\n",
+    "\n",
+    "# Names of the classes to be excluded from processing. Set to None if all folders need to be processed\n",
+    "CLASSES_EXCLUDE = ['Extra']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:15.683621Z",
-     "start_time": "2019-05-16T05:49:15.678970Z"
+     "end_time": "2019-05-26T12:18:01.492269Z",
+     "start_time": "2019-05-26T12:18:01.488253Z"
     }
    },
    "outputs": [],
@@ -102,12 +107,12 @@
     "# ASPECT_RATIO = 4896/3672\n",
     "\n",
     "# Size for small images\n",
-    "HEIGHT_NEW = 306\n",
-    "WIDTH_NEW = 408 \n",
+    "# HEIGHT_NEW = 306\n",
+    "# WIDTH_NEW = 408 \n",
     "\n",
     "# Size for large images\n",
-    "# HEIGHT_NEW = 612\n",
-    "# WIDTH_NEW = 816"
+    "HEIGHT_NEW = 612\n",
+    "WIDTH_NEW = 816"
    ]
   },
   {
@@ -125,12 +130,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensure the paths are valid"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:16.478549Z",
-     "start_time": "2019-05-16T05:49:16.471427Z"
+     "end_time": "2019-05-26T12:19:46.852099Z",
+     "start_time": "2019-05-26T12:19:46.840775Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "check_exists_path = lambda x: os.path.exists(x)\n",
+    "assert(check_exists_path(PATH_INPUT))\n",
+    "assert(check_exists_path(PATH_OUTPUT))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper Function to get list of images in a path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-26T12:18:06.416742Z",
+     "start_time": "2019-05-26T12:18:06.410051Z"
     },
     "code_folding": [
      0
@@ -166,22 +201,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Identify all the classes by analyzing the folder structure, and remove categories defined under CLASSES_EXCLUDE from inspection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:16.545233Z",
-     "start_time": "2019-05-16T05:49:16.535506Z"
+     "end_time": "2019-05-26T12:20:43.115114Z",
+     "start_time": "2019-05-26T12:20:43.091578Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['defective_lav', 'defective_ldl', 'non_defective', 'non_defective_bubbles']"
+       "['Extra',\n",
+       " 'LAV-P1',\n",
+       " 'LAV-P2',\n",
+       " 'LAV-P3',\n",
+       " 'LDL-P1',\n",
+       " 'LDL-P2',\n",
+       " 'LDL-P3',\n",
+       " 'LDL-P4',\n",
+       " 'Not Defective',\n",
+       " 'Not Defective Bubbles']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +247,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-26T12:21:36.223319Z",
+     "start_time": "2019-05-26T12:21:36.218799Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Exclude categories that are not required\n",
+    "for category in CLASSES_EXCLUDE:\n",
+    "    if category in classes:\n",
+    "        classes.remove(category)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:17.021141Z",
-     "start_time": "2019-05-16T05:49:17.006987Z"
+     "end_time": "2019-05-26T12:21:51.858459Z",
+     "start_time": "2019-05-26T12:21:51.189734Z"
     }
    },
    "outputs": [],
@@ -227,11 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:17.997653Z",
-     "start_time": "2019-05-16T05:49:17.987644Z"
+     "end_time": "2019-05-26T12:21:52.983497Z",
+     "start_time": "2019-05-26T12:21:52.963207Z"
     }
    },
    "outputs": [],
@@ -242,11 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:18.188060Z",
-     "start_time": "2019-05-16T05:49:18.173906Z"
+     "end_time": "2019-05-26T12:21:53.326193Z",
+     "start_time": "2019-05-26T12:21:53.297452Z"
     }
    },
    "outputs": [],
@@ -257,14 +325,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:18.933718Z",
-     "start_time": "2019-05-16T05:49:18.917991Z"
+     "end_time": "2019-05-26T12:22:03.434141Z",
+     "start_time": "2019-05-26T12:22:03.414825Z"
     }
    },
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(149, 4)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "data": {
       "text/html": [
@@ -296,36 +374,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>/Users/shyamravikumar/Documents/Box Sync/Final...</td>\n",
-       "      <td>defective_lav</td>\n",
+       "      <td>LAV-P1</td>\n",
        "      <td>Sample 2 - Pattern 1 - 1.JPG</td>\n",
        "      <td>/Users/shyamravikumar/Documents/Workspace/BAI ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>/Users/shyamravikumar/Documents/Box Sync/Final...</td>\n",
-       "      <td>defective_lav</td>\n",
-       "      <td>Sample 3 - Pattern 1 - 1.JPG</td>\n",
+       "      <td>LAV-P1</td>\n",
+       "      <td>Sample 2 - Pattern 1 - 12.JPG</td>\n",
        "      <td>/Users/shyamravikumar/Documents/Workspace/BAI ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>/Users/shyamravikumar/Documents/Box Sync/Final...</td>\n",
-       "      <td>defective_lav</td>\n",
-       "      <td>Sample 3 - Pattern 1 - 2.JPG</td>\n",
+       "      <td>LAV-P1</td>\n",
+       "      <td>Sample 2 - Pattern 1 - 2.JPG</td>\n",
        "      <td>/Users/shyamravikumar/Documents/Workspace/BAI ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>/Users/shyamravikumar/Documents/Box Sync/Final...</td>\n",
-       "      <td>defective_lav</td>\n",
-       "      <td>Sample 5 - Pattern 1 - 1.JPG</td>\n",
+       "      <td>LAV-P1</td>\n",
+       "      <td>Sample 2 - Pattern 1 - 3.JPG</td>\n",
        "      <td>/Users/shyamravikumar/Documents/Workspace/BAI ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>/Users/shyamravikumar/Documents/Box Sync/Final...</td>\n",
-       "      <td>defective_lav</td>\n",
-       "      <td>Sample 5 - Pattern 1 - 2.JPG</td>\n",
+       "      <td>LAV-P1</td>\n",
+       "      <td>Sample 2 - Pattern 1 - 4.JPG</td>\n",
        "      <td>/Users/shyamravikumar/Documents/Workspace/BAI ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -333,19 +411,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                path          class  \\\n",
-       "0  /Users/shyamravikumar/Documents/Box Sync/Final...  defective_lav   \n",
-       "1  /Users/shyamravikumar/Documents/Box Sync/Final...  defective_lav   \n",
-       "2  /Users/shyamravikumar/Documents/Box Sync/Final...  defective_lav   \n",
-       "3  /Users/shyamravikumar/Documents/Box Sync/Final...  defective_lav   \n",
-       "4  /Users/shyamravikumar/Documents/Box Sync/Final...  defective_lav   \n",
+       "                                                path   class  \\\n",
+       "0  /Users/shyamravikumar/Documents/Box Sync/Final...  LAV-P1   \n",
+       "1  /Users/shyamravikumar/Documents/Box Sync/Final...  LAV-P1   \n",
+       "2  /Users/shyamravikumar/Documents/Box Sync/Final...  LAV-P1   \n",
+       "3  /Users/shyamravikumar/Documents/Box Sync/Final...  LAV-P1   \n",
+       "4  /Users/shyamravikumar/Documents/Box Sync/Final...  LAV-P1   \n",
        "\n",
-       "                       filename  \\\n",
-       "0  Sample 2 - Pattern 1 - 1.JPG   \n",
-       "1  Sample 3 - Pattern 1 - 1.JPG   \n",
-       "2  Sample 3 - Pattern 1 - 2.JPG   \n",
-       "3  Sample 5 - Pattern 1 - 1.JPG   \n",
-       "4  Sample 5 - Pattern 1 - 2.JPG   \n",
+       "                        filename  \\\n",
+       "0   Sample 2 - Pattern 1 - 1.JPG   \n",
+       "1  Sample 2 - Pattern 1 - 12.JPG   \n",
+       "2   Sample 2 - Pattern 1 - 2.JPG   \n",
+       "3   Sample 2 - Pattern 1 - 3.JPG   \n",
+       "4   Sample 2 - Pattern 1 - 4.JPG   \n",
        "\n",
        "                                         path_output  \n",
        "0  /Users/shyamravikumar/Documents/Workspace/BAI ...  \n",
@@ -355,35 +433,36 @@
        "4  /Users/shyamravikumar/Documents/Workspace/BAI ...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data_images.shape\n",
     "data_images.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:19.186630Z",
-     "start_time": "2019-05-16T05:49:19.179416Z"
+     "end_time": "2019-05-26T12:22:08.299800Z",
+     "start_time": "2019-05-26T12:22:08.279837Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['/Users/shyamravikumar/Documents/Box Sync/Final Project - Image Detection/03 Defect Images/For Testing Purpose - Priyank/defective_lav/Sample 2 - Pattern 1 - 1.JPG',\n",
-       "       'defective_lav', 'Sample 2 - Pattern 1 - 1.JPG',\n",
-       "       '/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/1. Resized Images/defective_lav/Sample 2 - Pattern 1 - 1.JPG'],\n",
+       "array(['/Users/shyamravikumar/Documents/Box Sync/Final Project - Image Detection/03 Defect Images/01 Raw Images - Model Inputs/Raw Images/LAV-P1/Sample 2 - Pattern 1 - 1.JPG',\n",
+       "       'LAV-P1', 'Sample 2 - Pattern 1 - 1.JPG',\n",
+       "       '/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/1. Resized Images/LAV-P1/Sample 2 - Pattern 1 - 1.JPG'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,11 +480,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:53.296132Z",
-     "start_time": "2019-05-16T05:49:53.288795Z"
+     "end_time": "2019-05-26T12:22:19.981762Z",
+     "start_time": "2019-05-26T12:22:19.973237Z"
     }
    },
    "outputs": [],
@@ -447,11 +526,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:49:59.076490Z",
-     "start_time": "2019-05-16T05:49:59.071351Z"
+     "end_time": "2019-05-26T12:22:25.309444Z",
+     "start_time": "2019-05-26T12:22:25.304648Z"
     }
    },
    "outputs": [],
@@ -471,88 +550,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:50:53.904024Z",
-     "start_time": "2019-05-16T05:50:04.486837Z"
+     "end_time": "2019-05-26T12:27:24.819215Z",
+     "start_time": "2019-05-26T12:27:24.812935Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     None\n",
-       "1     None\n",
-       "2     None\n",
-       "3     None\n",
-       "4     None\n",
-       "5     None\n",
-       "6     None\n",
-       "7     None\n",
-       "8     None\n",
-       "9     None\n",
-       "10    None\n",
-       "11    None\n",
-       "12    None\n",
-       "13    None\n",
-       "14    None\n",
-       "15    None\n",
-       "0     None\n",
-       "1     None\n",
-       "2     None\n",
-       "3     None\n",
-       "4     None\n",
-       "5     None\n",
-       "6     None\n",
-       "7     None\n",
-       "8     None\n",
-       "9     None\n",
-       "10    None\n",
-       "11    None\n",
-       "12    None\n",
-       "13    None\n",
-       "      ... \n",
-       "7     None\n",
-       "8     None\n",
-       "9     None\n",
-       "10    None\n",
-       "11    None\n",
-       "12    None\n",
-       "13    None\n",
-       "14    None\n",
-       "15    None\n",
-       "16    None\n",
-       "17    None\n",
-       "18    None\n",
-       "19    None\n",
-       "20    None\n",
-       "21    None\n",
-       "22    None\n",
-       "23    None\n",
-       "24    None\n",
-       "25    None\n",
-       "26    None\n",
-       "27    None\n",
-       "28    None\n",
-       "29    None\n",
-       "30    None\n",
-       "31    None\n",
-       "32    None\n",
-       "33    None\n",
-       "34    None\n",
-       "35    None\n",
-       "36    None\n",
-       "Length: 127, dtype: object"
+       "array([None], dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_images.apply(lambda x: read_resize_and_save(x['path'],x['path_output']),axis=1)"
+    "temp = data_images.apply(lambda x: read_resize_and_save(x['path'],x['path_output']),axis=1)\n",
+    "temp.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-26T12:27:31.436736Z",
+     "start_time": "2019-05-26T12:27:31.431484Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Images have been resized....\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Images have been resized....\")"
    ]
   }
  ],
