--- a/Pre-processing/2. Rename images.ipynb
+++ b/Pre-processing/2. Rename images.ipynb
@@ -28,11 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:54:53.142047Z",
-     "start_time": "2019-05-16T05:54:52.255950Z"
+     "end_time": "2019-05-26T12:35:32.262554Z",
+     "start_time": "2019-05-26T12:35:32.256304Z"
     }
    },
    "outputs": [],
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:54:53.174945Z",
-     "start_time": "2019-05-16T05:54:53.169476Z"
+     "end_time": "2019-05-26T12:35:32.754768Z",
+     "start_time": "2019-05-26T12:35:32.750875Z"
     }
    },
    "outputs": [],
@@ -59,34 +59,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:57:15.837475Z",
-     "start_time": "2019-05-16T05:57:15.808567Z"
+     "end_time": "2019-05-26T12:39:18.601818Z",
+     "start_time": "2019-05-26T12:39:18.589789Z"
     }
    },
    "outputs": [],
    "source": [
     "EXTENSION_IMAGES = \".JPG\"\n",
-    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/2. Renamed Images'\n",
-    "PATH_MAPPING_FILES = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/Mapping Files'\n",
+    "# Path containing the images (inside folders representing classes) that need to be renamed in a sequential order\n",
+    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/2. Renamed Images'\n",
+    "PATH_MAPPING_FILES = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/Mapping Files'\n",
+    "\n",
     "\n",
     "# Provide list of locations for which the fix needs to be applied - Each item in the list is a 3 item tuple containing a path, a prefix for each file names, and the location of the output text file\n",
     "LIST_CONFIG = [\n",
-    "    (os.path.join(PATH_INPUT,'defective_lav'),\n",
-    "     'def_lav_',\n",
-    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_def_lav.csv')\n",
+    "    (os.path.join(PATH_INPUT,'LAV-P1'),\n",
+    "     'def_lav_p1_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_LAV-P1.csv')\n",
     "     ),\n",
-    "    (os.path.join(PATH_INPUT,'defective_ldl'),\n",
-    "     'def_ldl_',\n",
-    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_def_ldl.csv')\n",
+    "    (os.path.join(PATH_INPUT,'LAV-P2'),\n",
+    "     'def_lav_p2_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_LAV-P2.csv')\n",
     "     ),\n",
-    "    (os.path.join(PATH_INPUT,'non_defective'),\n",
+    "    (os.path.join(PATH_INPUT,'LAV-P3'),\n",
+    "     'def_lav_p3_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_LAV-P3.csv')\n",
+    "     ),\n",
+    "    (os.path.join(PATH_INPUT,'LDL-P1'),\n",
+    "     'def_ldl_p1_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_LDL-P1.csv')\n",
+    "     ),\n",
+    "    (os.path.join(PATH_INPUT,'LDL-P2'),\n",
+    "     'def_ldl_p2_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_LDL-P2.csv')\n",
+    "     ),\n",
+    "    (os.path.join(PATH_INPUT,'LDL-P3'),\n",
+    "     'def_ldl_p3_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_LDL-P3.csv')\n",
+    "     ),\n",
+    "    (os.path.join(PATH_INPUT,'LDL-P4'),\n",
+    "     'def_ldl_p4_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_LDL-P4.csv')\n",
+    "     ),\n",
+    "    (os.path.join(PATH_INPUT,'Not Defective'),\n",
     "     'nondef_',\n",
     "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_nondef.csv')\n",
     "     ),\n",
-    "    (os.path.join(PATH_INPUT,'non_defective_bubbles'),\n",
+    "    (os.path.join(PATH_INPUT,'Not Defective Bubbles'),\n",
     "     'nondef_bubbles_',\n",
     "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_nondef_bubbles.csv')\n",
     "     )\n",
@@ -101,12 +123,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensure the paths are valid"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:57:16.546542Z",
-     "start_time": "2019-05-16T05:57:16.530252Z"
+     "end_time": "2019-05-26T12:39:19.360528Z",
+     "start_time": "2019-05-26T12:39:19.355523Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "check_exists_path = lambda x: os.path.exists(x)\n",
+    "assert(check_exists_path(PATH_INPUT))\n",
+    "assert(check_exists_path(PATH_MAPPING_FILES))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper Functions to get list of images in a path, and rename them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-26T12:39:19.692359Z",
+     "start_time": "2019-05-26T12:39:19.686320Z"
     },
     "code_folding": [
      0
@@ -143,11 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:57:16.810794Z",
-     "start_time": "2019-05-16T05:57:16.803649Z"
+     "end_time": "2019-05-26T12:39:20.520719Z",
+     "start_time": "2019-05-26T12:39:20.516452Z"
     }
    },
    "outputs": [],
@@ -158,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:57:17.967213Z",
-     "start_time": "2019-05-16T05:57:17.858708Z"
+     "end_time": "2019-05-26T12:39:22.027300Z",
+     "start_time": "2019-05-26T12:39:21.883556Z"
     }
    },
    "outputs": [],
