--- a/Pre-processing/3. train_test_split.ipynb
+++ b/Pre-processing/3. train_test_split.ipynb
@@ -21,7 +21,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import-required-Libraries\" data-toc-modified-id=\"Import-required-Libraries-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import required Libraries</a></span></li><li><span><a href=\"#Function-definition\" data-toc-modified-id=\"Function-definition-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Function definition</a></span></li><li><span><a href=\"#Example-usage\" data-toc-modified-id=\"Example-usage-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Example usage</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import-required-Libraries\" data-toc-modified-id=\"Import-required-Libraries-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import required Libraries</a></span></li><li><span><a href=\"#Function-definition\" data-toc-modified-id=\"Function-definition-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Function definition</a></span></li><li><span><a href=\"#Example-usage\" data-toc-modified-id=\"Example-usage-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Example usage</a></span></li><li><span><a href=\"#Merge-folders,-if-required\" data-toc-modified-id=\"Merge-folders,-if-required-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Merge folders, if required</a></span></li></ul></div>"
    ]
   },
   {
@@ -36,8 +36,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-23T02:27:58.218154Z",
-     "start_time": "2019-05-23T02:27:55.466673Z"
+     "end_time": "2019-05-26T12:44:16.227656Z",
+     "start_time": "2019-05-26T12:44:14.023680Z"
     }
    },
    "outputs": [],
@@ -61,12 +61,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper Functions to get list of images in a path, and rename them"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-23T02:27:58.274362Z",
-     "start_time": "2019-05-23T02:27:58.256787Z"
+     "end_time": "2019-05-26T12:44:54.992369Z",
+     "start_time": "2019-05-26T12:44:54.985557Z"
     },
     "code_folding": [
      0
@@ -102,12 +109,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper function to create train & test splits of images"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-23T02:27:58.347696Z",
-     "start_time": "2019-05-23T02:27:58.304912Z"
+     "end_time": "2019-05-26T12:44:55.343076Z",
+     "start_time": "2019-05-26T12:44:55.319384Z"
     },
     "code_folding": [
      0
@@ -226,27 +240,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-23T02:28:40.486909Z",
-     "start_time": "2019-05-23T02:28:40.472299Z"
+     "end_time": "2019-05-26T12:44:58.877594Z",
+     "start_time": "2019-05-26T12:44:58.873032Z"
     }
    },
    "outputs": [],
    "source": [
-    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/2. Renamed Images'\n",
-    "PATH_OUTPUT_TRAIN = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/train'\n",
-    "PATH_OUTPUT_TEST = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/test'"
+    "# Folders where the input files must be present & output files must be placed. Should be valid paths \n",
+    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/2. Renamed Images'\n",
+    "PATH_OUTPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/3. Train Test Split'\n",
+    "\n",
+    "# Train and test folders will be created inside these paths, containing the required images\n",
+    "PATH_OUTPUT_TRAIN = os.path.join(PATH_OUTPUT,'train')\n",
+    "PATH_OUTPUT_TEST = os.path.join(PATH_OUTPUT,'test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensure the paths are valid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-23T02:28:48.053708Z",
-     "start_time": "2019-05-23T02:28:47.598545Z"
+     "end_time": "2019-05-26T12:45:04.763081Z",
+     "start_time": "2019-05-26T12:45:04.755415Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "check_exists_path = lambda x: os.path.exists(x)\n",
+    "assert(check_exists_path(PATH_INPUT))\n",
+    "assert(check_exists_path(PATH_OUTPUT))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the train test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-26T12:45:10.940126Z",
+     "start_time": "2019-05-26T12:45:10.171527Z"
     }
    },
    "outputs": [
@@ -254,8 +302,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/train\n",
-      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/test\n"
+      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/3. Train Test Split/train\n",
+      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V4/3. Train Test Split/test\n"
      ]
     },
     {
@@ -275,17 +323,27 @@
       "Summary\n",
       "------\n",
       "\n",
-      "Total number of samples:127. \n",
+      "Total number of samples:149. \n",
       "Volumes across categories:\n",
       " type   class                \n",
-      "test   defective_lav             6\n",
-      "       defective_ldl             7\n",
-      "       non_defective            23\n",
-      "       non_defective_bubbles    15\n",
-      "train  defective_lav            10\n",
-      "       defective_ldl            11\n",
-      "       non_defective            33\n",
-      "       non_defective_bubbles    22\n",
+      "test   LAV-P1                    4\n",
+      "       LAV-P2                    2\n",
+      "       LAV-P3                    3\n",
+      "       LDL-P1                    1\n",
+      "       LDL-P2                    4\n",
+      "       LDL-P3                    1\n",
+      "       LDL-P4                    2\n",
+      "       Not Defective            28\n",
+      "       Not Defective Bubbles    15\n",
+      "train  LAV-P1                    6\n",
+      "       LAV-P2                    2\n",
+      "       LAV-P3                    4\n",
+      "       LDL-P1                    2\n",
+      "       LDL-P2                    7\n",
+      "       LDL-P3                    3\n",
+      "       LDL-P4                    2\n",
+      "       Not Defective            41\n",
+      "       Not Defective Bubbles    22\n",
       "dtype: int64\n"
      ]
     }
@@ -300,13 +358,6 @@
     "    random_state=12334  \n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
